<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/welcome_to_music_world"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="366dp"
        android:layout_height="325dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        app:srcCompat="@drawable/music" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="4dp"
        android:progress="@android:integer/config_mediumAnimTime"
        android:scrollbarStyle="outsideOverlay"
        android:soundEffectsEnabled="true"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/button"
        android:layout_width="83dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:background="#7CB342"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/stop"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PlayList"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PlayList"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="5dp"
        android:background="#7CB342"
        android:fontFamily="@font/oswald_bold"
        android:onClick="OpenActivity"
        android:text="@string/playlist"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/PlayPause"
        android:layout_width="83dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:background="#7CB342"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/play"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/songname"
        android:layout_width="346dp"
        android:layout_height="25dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/oswald_bold"
        android:marqueeRepeatLimit="marquee_forever"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>